--- a/.dvc/config
+++ b/.dvc/config
@@ -1,4 +1,7 @@
 [core]
-    remote = data_srv
-['remote "data_srv"']
-    url = ssh://clone@192.168.56.102:/MLOps_project1
+    remote = ssh-storage
+['remote "ssh-storage"']
+    url = ssh://data_srv@192.168.56.102/MLOps_project1/data
+    password = clone
+    user = clone
+    port = 22
