--- a/dvc.yaml
+++ b/dvc.yaml
@@ -32,4 +32,13 @@ stages:
     - scripts/model_learning/train_model.py
     outs:
     - models/model.pkl
+  evaluate_model:
+    cmd: python3 metircs/evaluate.py
+    deps:
+    - data/processed/test_final.csv
+    - metrics/evaluate.py
+    - models/model.pkl
+    metrics:
+    - metrics/metrics.json
+  
   
